# DRF_Course

./: .env.sample  README.MD  pyproject.toml
drf/: celery.py  settings.py  telegram_bot.py  urls.py
habbits/: models.py
habbits/migrations/: 0001_initial.py  0002_initial.py
habits/: models.py  permissions.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_action_alter_habit_frequency_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
